styles_dark.css
body {
  font-family: "open sans", Verdana, arial, sans-serif;
  color: white;
  margin: 0;
  background-color: #000000;
}

main {
  margin-left: auto;
  margin-right: auto;
  max-width: 50rem;
  /* was 70rem */
  background-color: #000000;
}

.mainPageMain {
  max-width: 70rem;
}

h1 {
  font-size: 2.2rem;
  font-family: "open sans", sans-serif;
  margin-top: 0;
  margin-left: 2px;
  margin: 0 10px 0 10px;
}

.navigation_menu {
  background-color: #003fd1;
}

ul {
  /* remove formatting from unformatted lists so my links can be put into a navigation bar */
  list-style-type: none;
  padding: 0;
  text-align: center;
}

li {
  display: inline-block;
  padding: 0.5rem 0.3rem 0.5rem 0.3rem;
}

a {
  color: #0085f3;
}

ul a {
  text-decoration: none;
  /* There are line breaks between the li that HTML treats as significant. Don't underline that whitespace. */
}

a li {
  text-decoration: underline;
  /* Do underline text within li items since they're links. */
  color: white;
}

li:hover {
  background-color: #001a57;
}

.content {
  clear: both;
  margin: 0 10px 0 10px;
}

img {
  height: 0.8em;
  filter: invert(1);
  position: relative;
  top: 0.1em;
  left: 0.2em;
}

input,
select {
  width: auto;
  border: 1px solid gray;
  background-color: #1d1d1d;
  color: white;
}

input:focus,
select:focus {
  border: 1px solid lightgray;
  background-color: #2d2d2d;
}

/* Firefox - prevent number buttons/spinners */
input[type="number"] {
  appearance: textfield;
}

/* Webkit - prevent number buttons/spinners */
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
}


label {
  height: 1.4em;
}

/* Begin button styling for Plates to Weight calculator */
input[type="button"] {
  height: 1.5em;
  /*margin: 0em 1em 0.192em 0em;*/
  margin: 0.1em 0.5em 0.1em 0.5em;
  padding: 0em 1em 0em 1em;
  vertical-align: top;
}

.table {
  table-layout: fixed;
  width: max-content;
}

.table tr>td:first-child {
  text-align: right;
}

/* End button styling for Plates to Weight calculator */

